# adr-ai

./: .gitignore  README.md
client/: .env  .env.sample  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  EmptyState.tsx  FileDropzone.tsx  FileList.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
client/src/constants/: apiRoutes.ts  env-contants.ts  uiRoutes.ts
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useChat.ts  useConversations.ts  (+1 more)
docs/: DEMO_SCRIPT.md  FEATURES_DOCUMENTATION.md
server/: .dockerignore  .env.sample  .gitignore  Dockerfile  QUICK_REFERENCE.md  README.md  REFACTORING_ISSUES_FIXED.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
server/app/: config.py  main.py  query_chroma.py
server/app/api/: dependencies.py
server/app/api/v1/routes/: auth.py  conversations.py  files.py  query.py  upload.py
server/app/api/v1/schemas/: conversations.py
server/app/chains/: extraction_chain.py
server/app/config/: database.py  settings.py
server/app/constants/: misc_constants.py
server/app/core/: config.py  database.py  exceptions.py  security.py
server/app/domain/models/: database.py
server/app/domain/schemas/: __init__.py  query.py
server/app/infrastructure/: __init__.py
server/app/infrastructure/llm/: __init__.py
server/app/infrastructure/llm/chains/: __init__.py  extraction_chain.py
server/app/infrastructure/retrieval/: __init__.py  hybrid_retriever.py  query_classifier.py  retrieval_service.py
server/app/middleware/: auth.py
server/app/models/: database.py  schemas.py
server/app/routers/: auth.py  conversations.py
server/app/services/: adr_service.py  auth_service.py  conversation_service.py  hybrid_retriever.py  intent_service.py  query_classifier.py  retrieval_service.py  s3_client.py  uploader_service.py
server/app/services/adr/: __init__.py  adr_service.py  document_processor.py  metadata_extractor.py  query_processor.py  response_generator.py  vector_store_service.py
server/app/services/auth/: auth_service.py  oauth_service.py
server/app/services/conversation/: __init__.py  conversation_service.py
server/app/services/storage/: __init__.py  s3_client.py  s3_service.py
server/app/utils/: constants.py  text_cleaner.py  text_processing.py
server/scripts/: README.md  localstack_setup.sh  query_chroma.py
(+6 files in other folders)
